User: fix messages, password alignment

--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -78,6 +78,13 @@ section {
   }
 }
 
+// USER
+.user {
+  .password {
+    height: 2.4em;
+  }
+}
+
 // MESSAGES
 .user-messages {
   select {
